change asmdef file names, add example

--- a/Editor/Murtagh.Editor.asmdef
+++ b/Editor/Murtagh.Editor.asmdef
@@ -2,7 +2,7 @@
     "name": "Murtagh.Editor",
     "rootNamespace": "Murtagh.Editor",
     "references": [
-        "Murtagh"
+        "Murtagh.Runtime"
     ],
     "includePlatforms": [
         "Editor"
