--- a/Runtime/Murtagh.Runtime.asmdef
+++ b/Runtime/Murtagh.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Murtagh",
+    "name": "Murtagh.Runtime",
     "rootNamespace": "Murtagh",
     "references": [],
     "includePlatforms": [],
